fixed css issue with card back being visible during transform on iOS

--- a/style.css
+++ b/style.css
@@ -374,6 +374,7 @@ a {
 
 .start-modal .card-flip {
     transform: rotateY(180deg);
+    backface-visibility: hidden;
 }
 
 
